flex wrapping on contact page, fix formatting. Trying to resolve issue with background clr

--- a/css/contactme.css
+++ b/css/contactme.css
@@ -1,23 +1,21 @@
 .contactpage {
   width: 100vw;
-  height: 100vh;
+  height: 650px;
   display: flex;
   align-items: flex-start;
   justify-content: center;
   margin-top: 245px;
   margin-bottom: 100px;
   background-color: #84a2a3;
-
 }
 
 .grid {
-  display: grid;
-  /* position: fixed; */
-  height: 690px;
+  display: flex;
+  flex-wrap: wrap;
+  height: 500px;
   width: 100vw;
-  grid-template-rows: 1fr 10fr;
-  grid-template-columns: 5fr 2fr;
-  background-color: #84a2a3;
+  grid-template-rows: 1;
+  grid-template-columns: 70% 30%;
 }
 
 div.profilepic {
@@ -29,14 +27,9 @@ div.profilepic {
   background-size: cover;
   border: 3px solid #535460;
   border-radius: 50%;
-  grid-row: 2 / 3;
+  grid-row: 1;
   grid-column: 1 / 2;
-  
-}
-
-.page-title {
-  grid-row: 1 / 2;
-  grid-column: 1 / 3;
+  margin-top: 60px;
 }
 
 h3 {
@@ -54,15 +47,14 @@ form {
   align-items: center;
   width: 450px;
   height: 500px;
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
+  grid-row: 1;
   background-color: #84a2a3;
 }
 
 form label {
   color: #535460;
   font-family: 'Open Sans', sans-serif;
-  margin: 8px 0px;
+  margin: 12px 0px;
 }
 
 form p {
